# pointcloud_floor_filter

./: CMakeLists.txt  package.xml
cfg/: FloorFilter.cfg
include/pointcloud_floor_filter/: depth_to_pointcloud.h  floor_plane_estimation.h  pointcloud_floor_filter_lib.h
ros/: pointcloud_floor_filter.cpp
src/: depth_to_pointcloud.cpp  floor_plane_estimation.cpp  pointcloud_floor_filter_lib.cpp
