<package>
  <name>pointcloud_floor_filter</name>
  <version>0.0.1</version>
    <description>
     This package generates a point cloud from a depth image and removes all points that belong to the floor. 
    </description>

  <maintainer email="jkammerl@willowgarage.com">Julius Kammerl</maintainer>

  <license>BSD</license>

  <author email="jkammerl@willowgarage.com">Julius Kammerl</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>pcl_ros</build_depend>
  
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>pcl_ros</run_depend>
</package>
